complete outlier calc

--- a/Pymaceuticals.ipynb
+++ b/Pymaceuticals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "e68413d9",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "b6d64951",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "[1893 rows x 8 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "0e44674a",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
        "249"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "a4301685",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        "Name: Mouse ID, dtype: object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "c850dd5c",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
        "1592  Female          21          26  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "0c73b50a",
    "metadata": {},
    "outputs": [
@@ -707,7 +707,7 @@
        "[249 rows x 8 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "a83c1d98",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
        "249"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "eddd5ae1",
    "metadata": {},
    "outputs": [
@@ -896,7 +896,7 @@
        "Zoniferol           6.966589          0.516398  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "147f78f7",
    "metadata": {},
    "outputs": [
@@ -935,7 +935,7 @@
        "Text(0, 0.5, '# of Observed Mouse Timepoints')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "93198d13",
    "metadata": {},
    "outputs": [
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "id": "4ab3f371",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "id": "12133ad6",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "3eeb6284",
    "metadata": {},
    "outputs": [],
@@ -1051,10 +1051,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "3fbee727",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Capomulin's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
+      "Ramicane's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
+      "Infubinol's potential outliers: 55    36.321346\n",
+      "Name: Tumor Volume (mm3), dtype: float64\n",
+      "Ceftamin's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n"
+     ]
+    }
+   ],
    "source": [
     "# Treatments into a list \n",
     "treatments = ['Capomulin', 'Ramicane', 'Infubinol', 'Ceftamin']\n",
@@ -1064,7 +1076,15 @@
     "\n",
     "# Calculate IQR, quantitatively determine if any potential outliers \n",
     "for treatment in treatments:\n",
-    "    "
+    "    mice_tumor_volume = tumor_volume_last_timepoint.loc[tumor_volume_last_timepoint['Drug Regimen'] == treatment, 'Tumor Volume (mm3)']\n",
+    "    tumor_volumes.append(mice_tumor_volume)\n",
+    "\n",
+    "    quartiles = mice_tumor_volume.quantile([0.25, 0.75])\n",
+    "    lower_bound = quartiles[0.25] - 1.5 * (quartiles[0.75] - quartiles[0.25])\n",
+    "    upper_bound = quartiles[0.75] + 1.5 * (quartiles[0.75] - quartiles[0.25])\n",
+    "    outliers = mice_tumor_volume.loc[(mice_tumor_volume < lower_bound) | (mice_tumor_volume > upper_bound)]\n",
+    "\n",
+    "    print(f\"{treatment}'s potential outliers:\", outliers)"
    ]
   }
  ],
