--- a/Pymaceuticals.ipynb
+++ b/Pymaceuticals.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0dbf7230",
+   "metadata": {},
+   "source": [
+    "# Pymaceuticals Inc.\n",
+    "---\n",
+    "\n",
+    "### Analysis\n",
+    "\n",
+    "The summary statistics table compares the central tendencies and variabilities of tumor volume across various drug regimens. For example, in looking at the mean tumor volume, it can be observed that Ramicane had the lowest tumor volume in comparison to other drug regimens. Similarly, Capomulin has the lowest standard deviation, indicating the data points are close to the mean. The box plot showing the distribution of tumor volume for each drug regimen concisely demonstrates the median of the four treatment groups tend to be positively skewed. The correlation coefficient of 0.84 shows there is a positive linear relationship; as the weight of the mouse increases, the average tumor volume tends to increase. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
